--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,14 @@
             "homepage": "http://www.ongr.io"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:ongr-io/ConnectionsBundle.git"
-        }
-    ],
     "require": {
         "php": ">=5.4",
-        "symfony/symfony": "~2.3",
+        "symfony/symfony": "~2.6",
         "doctrine/orm": "~2.4",
         "doctrine/doctrine-bundle": "~1.2",
         "symfony/monolog-bundle": "~2.0",
         "ongr/elasticsearch-bundle": ">=0.1,<2",
-        "ongr/connections-bundle": "dev-master"
+        "ongr/connections-bundle": "~0.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2",
